Added KEEPALIVE var to set PersistentKeepalive

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
             - LOC=swiss
             - USER=p0000000
             - PASS=xxxxxxxxxxxxxxxx
+            #- KEEPALIVE=25
 
 volumes:
     pia:
