--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,16 @@ services:
         image: thrnz/docker-wireguard-pia
         volumes:
             - pia:/pia
-            # Forwarded port is dumped to /pia-shared/port.dat for potential use in other conainers
+            # Forwarded port is dumped to /pia-shared/port.dat for potential use in other containers
             #- pia-shared:/pia-shared
+        # privileged is needing for adding 0.0.0.0/0 route
         privileged: true
         cap_add:
             - NET_ADMIN
+            # Still needed with 5.6+ kernel?
             - SYS_MODULE
         environment:
-            #- LOCAL_NETWORK=192.168.1.1/24
+            #- LOCAL_NETWORK=192.168.1.0/24
             #- ALLOW_DOCKER=1
             - LOC=swiss
             - USER=p0000000
