--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,13 @@ services:
             - net.ipv6.conf.default.disable_ipv6=1
             - net.ipv6.conf.all.disable_ipv6=1
             - net.ipv6.conf.lo.disable_ipv6=1
+        # The continer has no recovery logic. Use a healthcheck to catch disconnects.
+        healthcheck:
+            test: ping -c 1 www.google.com || exit 1
+            interval: 30s
+            timeout: 10s
+            retries: 3
+
 
     # Example of another service sharing the VPN
     other-service:
