--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - 'master'
       - 'testing'
+    # Don't run if the readme is the only thing changed
+    paths-ignore:
+      - 'README.md'
   # Rebuild monthly to keep packages up to date
   schedule:
     - cron: '0 0 1 * *'
