--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -15,6 +15,9 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
       -
         uses: actions/checkout@v4
@@ -32,11 +35,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Log in to the Container registry
+        uses: docker/login-action@v3
+        if: github.repository_owner == 'thrnz'
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
         name: Docker Metadata
         id: docker-meta
         uses: docker/metadata-action@v5
         with:
-          images: thrnz/docker-wireguard-pia
+          images: |
+            thrnz/docker-wireguard-pia
+            ghcr.io/${{ github.repository }}
           tags: |
             # Tag branches with branch name, but disable for default branch
             type=ref,event=branch,enable=${{ github.ref_name != 'master' }}
