--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       #The rest are optional:
       #- LOCAL_NETWORK=192.168.1.0/24
       #- KEEPALIVE=25
+      #- RECONNECT=1
       #- VPNDNS=8.8.8.8,8.8.4.4
       #- PORT_FORWARDING=1
     sysctls:
