Add optional recovery logic for unresponsive endpoints (#135)
This is done without bringing down the WireGuard interface

---------

Co-authored-by: thrnz <thrnz@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - PASS=xxxxxxxxxxxxxxxx
       #The rest are optional:
       #- LOCAL_NETWORK=192.168.1.0/24
+      #- RECONNECT=1
       #- KEEPALIVE=25
       #- VPNDNS=8.8.8.8,8.8.4.4
       #- PORT_FORWARDING=1
