Add build info to dockerfile

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -55,6 +55,9 @@ jobs:
             type=ref,event=branch,enable=${{ github.ref_name != 'master' }}
             # set latest tag for default branch
             type=raw,value=latest,enable=${{ github.ref_name == 'master' }}
+      - name: Note build time
+        run: |
+          echo "BUILD_DATE=$(date)" >> ${GITHUB_ENV}
       -
         name: Build and push
         id: docker_build
@@ -63,6 +66,8 @@ jobs:
           platforms: linux/amd64,linux/arm,linux/arm64
           push: ${{ github.repository_owner == 'thrnz' }}
           tags: ${{ steps.docker-meta.outputs.tags }}
+          build-args: |
+            BUILDINFO="${{ github.ref_name }} ${{ github.sha }} ${{ env.BUILD_DATE }}"
           labels: ${{ steps.docker-meta.outputs.labels }}
       -
         name: Image digest
